--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT=5000
 SECRET=UkozsMpFEUMnpYakfo7bKdzEb7h8qjVrSBxJAg
 MONGO_URL=mongodb://admin:password@127.0.0.1:27017
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
