--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "eslint": "^8.20.0",
     "eslint-plugin-eslint-plugin": "^5.0.1",
     "eslint-plugin-jest": "^26.7.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-slow-test-reporter": "^1.0.0",
-    "nodemon": "^2.0.19",
-    "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.19",
+    "prisma": "^4.4.0",
     "validate-branch-name": "^1.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@prisma/client": "^4.4.0"
+  }
 }
