--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "dev": "nodemon",
     "lint": "eslint '**/*.{js,mjs}' --fix",
     "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --passWithNoTests",
-    "cover": "c8 --reporter html npm test"
+    "cover": "c8 --reporter html npm test",
+    "db:migrate": "prisma migrate dev --name init",
+    "db:seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "devDependencies": {
     "c8": "^7.12.0",
@@ -30,6 +35,10 @@
     "validate-branch-name": "^1.3.0"
   },
   "dependencies": {
-    "@prisma/client": "^4.4.0"
+    "@prisma/client": "^4.4.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
 }
