--- a/package.json
+++ b/package.json
@@ -14,19 +14,31 @@
     "dev": "nodemon",
     "lint": "eslint '**/*.{js,mjs}' --fix",
     "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --passWithNoTests",
-    "cover": "c8 --reporter html npm test"
+    "cover": "c8 --reporter html npm test",
+    "db:migrate": "prisma migrate dev --name init",
+    "db:seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "devDependencies": {
     "c8": "^7.12.0",
     "eslint": "^8.20.0",
     "eslint-plugin-eslint-plugin": "^5.0.1",
     "eslint-plugin-jest": "^26.7.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-slow-test-reporter": "^1.0.0",
-    "nodemon": "^2.0.19",
-    "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.19",
+    "prisma": "^4.4.0",
     "validate-branch-name": "^1.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@prisma/client": "^4.4.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  }
 }
