--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Run Tests
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1
+        with:
+            envkey_NODE_ENV: test
+            envkey_SECRET: ${{ secrets.SECRET }}
+            file_name: .env.test
+
+      - name: Tests
         uses: actions/setup-node@v3
         with:
           node-version: 16
