--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.4.0",
+    "sinon": "^14.0.1",
     "validate-branch-name": "^1.3.0"
   },
   "dependencies": {
