--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,4 +22,7 @@ jobs:
           node-version: 16
       - run: npm install
       - run: npm run lint
-      - run: npm run test
+      - run: npm run cover:gh
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
