--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint '**/*.{js,mjs}' --fix",
     "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --passWithNoTests",
     "cover": "c8 --reporter html npm test",
+    "cover:gh": "c8 --reporter=lcov npm test",
     "db:migrate": "prisma migrate dev --name init",
     "db:seed": "prisma db seed"
   },
@@ -32,6 +33,7 @@
     "lint-staged": "^13.0.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.4.0",
+    "sinon": "^14.0.1",
     "validate-branch-name": "^1.3.0"
   },
   "dependencies": {
