--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "socket.io": "^4.5.3"
   }
 }
