--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "validate-branch-name": "^1.3.0"
   },
   "dependencies": {
-    "@prisma/client": "^4.4.0",
+    "@prisma/client": "^4.7.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
+    "mongoose": "^6.8.0",
     "nodemailer": "^6.8.0",
     "socket.io": "^4.5.3"
   }
