--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nodemailer": "^6.8.0",
     "sass": "^1.56.1",
     "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.4",
     "vite": "^3.2.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
