--- a/package.json
+++ b/package.json
@@ -38,9 +38,16 @@
     "validate-branch-name": "^1.3.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
+    "@popperjs/core": "^2.11.6",
     "@prisma/client": "^4.7.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
