add sentry exception

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 EMAIL_FROM="Hello World <noreply@ghostrider.fr>"
 SMTP_URL="smtp://localhost:1025"
 
+SENTRY_DSN=""
 
 VITE_API_URL=http://localhost:5000
 VITE_WS_URL=ws://localhost:5000
