--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "@popperjs/core": "^2.11.6",
     "@prisma/client": "^4.7.1",
+    "@sentry/node": "^7.34.0",
+    "@sentry/tracing": "^7.34.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
